# tpoassets

./: AGENTS.md  ICON_GUIDE.md  README.md  assets_test.py  convert_raw_assets.py  generate_icons_png.py  pyproject.toml
src/: __init__.py
src/tpo_assets/: __init__.py  api.py  qt.py  registry.py  resolver.py
src/tpo_assets.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_all_icon_assets.py  test_convert_raw_assets.py  test_file_icon_aliases.py
