[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tpo-assets"
version = "0.1.0"
description = "TPO shared SVG asset store"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "John" }
]
dependencies = [
    "pyside6"
]
license = { text = "MIT" }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tpo_assets = ["assets/**/*.svg"]
